# solana-xtrader-v2

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: account-create.ts  account-fund.ts  account-withdraw.ts  claim.ts  main.ts  maker.ts  setup.ts  taker.ts  utils.ts  wallet.ts
client/src/keys/: maker_pubkey.json  maker_seckey.json  taker_pubkey.json  taker_seckey.json
program/: Cargo.toml
program/src/: entrypoint.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs
