[package]
name = "program"
version = "0.0.1"
description = "Test Solana Wizards Application"
edition = "2021"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.9.2"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0.31"
chainlink_solana = "1.0.0"

[dev-dependencies]
solana-program-test = "~1.9.2"
solana-sdk = "~1.9.2"

[lib]
name = "trade"
crate-type = ["cdylib", "lib"]
